# Knight-s-Tour

./: BEST_MODEL_SETUP.md  README.md  index.html  models  script.js  start_game.py  start_game.sh  styles.css
RL/: .gitignore  LICENSE  ORGANIZACAO_FINAL.md  README.md  app.py  dqn_agent.py  knight_env.py  model_config.py  pyproject.toml  requirements.txt  train.py
RL/.github/workflows/: ci.yml
RL/docs/: COMO_JOGAR_COM_IA.md  COMO_TREINAR.md  README_NOVA_ESTRUTURA.md  win.ipynb
RL/models/: test_results.json
RL/scripts/testing/: check_starting_position.py  quick_test.py  test_best_models.py  validate_winners.py
RL/scripts/training/: auto_train.py  run_training.sh  test_quick_training.py
RL/scripts/utils/: configure_model.py  manage_models.py  monitor_training.py  plot_results.py  update_csv.py
models/: README.md
