[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knight-tour-ai"
version = "1.0.0"
description = "Sistema de IA para resolver o problema do Cavalo Solitário usando Deep Q-Learning"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Knight's Tour AI Team", email = "contact@knight-tour-ai.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Games/Entertainment :: Board Games",
]
requires-python = ">=3.8"
dependencies = [
    "tensorflow>=2.8.0",
    "gym>=0.21.0",
    "numpy>=1.21.0",
    "tqdm>=4.62.0",
    "flask>=2.0.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "flake8>=4.0.0",
    "black>=22.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/seu-usuario/knight-tour-ai"
Repository = "https://github.com/seu-usuario/knight-tour-ai.git"
Documentation = "https://github.com/seu-usuario/knight-tour-ai#readme"
Issues = "https://github.com/seu-usuario/knight-tour-ai/issues"

[tool.black]
line-length = 127
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 127
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
] 